--- a/Home.html
+++ b/Home.html
@@ -39,7 +39,7 @@
                      <a href="#services" class="nav__link">services</a>
                   </li>
                   <li class="nav__item">
-                     <a href="https://drive.google.com/drive/folders/1BQTkJIw5K6PohFdfOG2Afw0Nn4bS_rQd?usp=drive_link" class="nav__link">Credentials & CV</a>
+                     <a href="https://drive.google.com/drive/folders/1BQTkJIw5K6PohFdfOG2Afw0Nn4bS_rQd?usp=drive_link" class="nav__link">Resume</a>
                   </li>
                   <li class="nav__item">
                      <a href="#projects" class="nav__link">projects</a>
