--- a/Home.html
+++ b/Home.html
@@ -3,6 +3,7 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="google-site-verification" content="iDZgDxf183M5yR2TkCL8UcaT8OzWHzvDK7mASESM76Q" />
 
       <!--=============== FAVICON ===============-->
       <link rel="shortcut icon" href="assets/img/profile.PNG" type="image/x-icon">
