--- a/Home.html
+++ b/Home.html
@@ -75,7 +75,7 @@
                          I'm a passionate software developer eager to take on exciting projects and bring fresh ideas to life.
                           With a solid foundation in M.sc(Computer Science),
                          I'm ready to collaborate with clients to create innovative solutions.</p>
-                     <a href="#contact" class="button">Lets talk</a>
+                     <a href="#contact" class="button">view resume</a>
                   </div>
                   <div class="home__social"><a href="https://github.com/nanthakumarnk" target="_blank" class="home__social-link">
                      <i class="ri-github-fill"></i>
