--- a/Home.html
+++ b/Home.html
@@ -2,7 +2,7 @@
    <html lang="en">
    <head>
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
       <meta name="google-site-verification" content="iDZgDxf183M5yR2TkCL8UcaT8OzWHzvDK7mASESM76Q" />
 
       <!--=============== FAVICON ===============-->
