--- a/Home.html
+++ b/Home.html
@@ -3,28 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Down</title>
+    <title>Website Moved</title>
     <style>
         body {
-            background-color: #121212;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
             font-family: Arial, sans-serif;
             text-align: center;
+            padding: 50px;
+            background-color: #121212;
+            color: #ffffff;
         }
-        .message {
-            font-size: 24px;
+        .container {
+            background: #1e1e1e;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1);
+            display: inline-block;
+        }
+        a {
+            display: inline-block;
+            margin-top: 15px;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        a:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
-    <div class="message">
-        <h1>This web page is temporarily turned down.</h1>
-        <p>Please check back later.</p>
+    <div class="container">
+        <h2>The website's port has changed.</h2>
+        <p>Click the button below to visit the updated site.</p>
+        <a href="https://nanthakumarsoftwaredeveloper.github.io/Portfolio/index.html">Visit the Site</a>
     </div>
 </body>
 </html>
