--- a/Home.html
+++ b/Home.html
@@ -37,7 +37,7 @@
     <div class="container">
         <h2>The website's port has changed.</h2>
         <p>Click the button below to visit the updated site.</p>
-        <a href="https://nanthakumarsoftwaredeveloper.github.io/Portfolio/index.html">Visit the Site</a>
+        <a href="https://nanthakumarsoftwaredeveloper.github.io/Portfolio/">Visit the Site</a>
     </div>
 </body>
 </html>
