--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
 </head>
 <body>
+    <!-- Preloading overlay -->
+         <div id="preloader">
+         <div id="spinner"></div>
+         </div>
     <!-- Header Section -->
      <header>
         <a href="#home" class="logo">Nantha Kumar</a>
