--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!--=============== FAVICON ===============-->
-    <link rel="shortcut icon" href="assets/Image/cropped_image.png" type="image/png">
+    <link rel="icon" type="image/x-icon" href="assets/Image/icon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Nantha kumar | Software Developer</title>
