--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <meta name="author" content="Nantha kumar">
     <meta name="description" content="I'm a passionate software developer specializing in web and mobile applications. I build high-performance, scalable solutions using modern technologies. Check out my projects and skills!">
     <meta name="keywords" content="Freelance Software Developer, Software Development Services, Web Developer, Mobile App Developer, Custom Software Solutions, Full Stack Developer, API Development, Backend Developer, Frontend Developer, Cloud Solutions, IT Consultant, Remote Software Developer, Web Application Development, Mobile Application Development, SaaS Developer, AI & ML Developer, Startup Software Solutions, Business Software Development">
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "qkyu8dofry");
+</script>
 
 </head>
 <body>
